--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "iron-session": "^8.0.4",
     "next": "15.0.3",
