--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/bcrypt": "^5.0.2",
     "bcryptjs": "^2.4.3",
     "iron-session": "^8.0.4",
+    "lucide-react": "^0.468.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "zod": "^3.23.8"
