--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-form",
+  "name": "assignment",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,28 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^5.22.0",
+    "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.20.0",
     "@types/bcrypt": "^5.0.2",
-    "bcryptjs": "^2.4.3",
-    "iron-session": "^8.0.4",
-    "lucide-react": "^0.468.0",
-    "next": "15.0.3",
-    "next-auth": "^4.24.10",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "bcrypt": "^5.1.1",
+    "iron-session": "^8.0.3",
+    "next": "14.2.13",
+    "react": "^18",
+    "react-dom": "^18",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
+    "@faker-js/faker": "^9.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
-    "prisma": "^5.22.0",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
