--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.3",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
